--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ script:
 
 deploy:
   provider: azure_web_apps
-  username: $AZURE_WA_USERNAME
-  password: $AZURE_WA_PASSWORD
-  site: $AZURE_WA_SITE
+  # username: $AZURE_WA_USERNAME
+  # password: $AZURE_WA_PASSWORD
+  # site: $AZURE_WA_SITE
   on:
     branch: master
